router/apollo-router/src/configuration/snapshots/apollo_router__configuration__metrics__test__metrics@apq.router.yaml.snap
---
source: apollo-router/src/configuration/metrics.rs
expression: "&metrics.metrics"
---
value.apollo.router.config.apq:
  - 1
  - opt__router__cache__in_memory__: true
    opt__router__cache__redis__: true
    opt__subgraph__: true

