router/apollo-router/src/configuration/snapshots/apollo_router__configuration__metrics__test__metrics@coprocessor.router.yaml.snap
---
source: apollo-router/src/configuration/metrics.rs
expression: "&metrics.metrics"
---
value.apollo.router.config.coprocessor:
  - 1
  - opt__router__request__: true
    opt__router__response__: true
    opt__subgraph__request__: true
    opt__subgraph__response__: true
    opt__supergraph__request__: true
    opt__supergraph__response__: true

