router/apollo-router/src/configuration/snapshots/apollo_router__configuration__metrics__test__metrics@persisted_queries.router.yaml.snap
---
source: apollo-router/src/configuration/metrics.rs
expression: "&metrics.metrics"
---
value.apollo.router.config.persisted_queries:
  - 1
  - opt__log_unknown__: true
    opt__safelist__enabled__: true
    opt__safelist__require_id__: true

