router/apollo-router/src/configuration/snapshots/apollo_router__configuration__metrics__test__metrics@sigv4.router.yaml.snap
---
source: apollo-router/src/configuration/metrics.rs
expression: "&metrics.metrics"
---
value.apollo.router.config.authentication.aws.sigv4:
  - 1
  - {}

